--- a/airline-android/app/src/main/res/layout/activity_main.xml
+++ b/airline-android/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,38 @@
     android:background="@color/white"
     tools:context=".MainActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         >
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Home Screen"
-            android:layout_centerInParent="true"
-            android:textSize = "28sp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:id= "@+id/textView"/>
+            android:fontFamily="sans-serif"
+            android:text="@string/project_6"
+            android:textAlignment="viewStart"
+            android:textSize="34sp" />
 
-    </RelativeLayout>
+        <androidx.appcompat.widget.SearchView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            app:queryHint="@string/search_hint"
+            android:id="@+id/search_bar"
+            app:iconifiedByDefault="false"
+            ></androidx.appcompat.widget.SearchView>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:id="@+id/list_items"
+            >
+        </ListView>
+    </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
