--- a/airline-android/app/src/main/res/values/colors.xml
+++ b/airline-android/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#ED8B3E</color>
+    <color name="light_gray">#D8D8D8</color>
 </resources>
