--- a/airline-android/app/src/main/res/values/colors.xml
+++ b/airline-android/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#ED8B3E</color>
+    <color name="colorAccent">#E87114</color>
     <color name="light_gray">#D8D8D8</color>
+    <color name="gray">#BCBCBC</color>
 </resources>
