--- a/airline-android/app/src/main/res/layout/activity_display_airline.xml
+++ b/airline-android/app/src/main/res/layout/activity_display_airline.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="25sp"
+        android:id="@+id/airlineNameDisplay"
         android:text="Alaska Airlines"
         android:textStyle="bold"
         android:layout_marginVertical="10dp"
