--- a/airline-android/app/src/main/res/layout/activity_add_info.xml
+++ b/airline-android/app/src/main/res/layout/activity_add_info.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/parentLayoutAdd"
     tools:context=".MainActivity">
-
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minHeight="290dp"
-        android:minWidth="380dp"
         android:layout_centerHorizontal="true"
+        android:minWidth="380dp"
         android:layout_marginTop="25dp"
         >
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -233,4 +231,5 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+    <include layout="@layout/menu" />
 </RelativeLayout>
