--- a/airline-android/app/src/main/res/layout/activity_main.xml
+++ b/airline-android/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         <androidx.appcompat.widget.SearchView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+            android:layout_marginVertical="2dp"
             app:queryHint="@string/search_hint"
             android:id="@+id/search_bar"
             app:iconifiedByDefault="false"
@@ -40,19 +40,6 @@
         </ListView>
     </LinearLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/add_button"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
-        app:fabSize="normal"
-        app:backgroundTint="@color/colorPrimary"
-        app:elevation="6dp"
-        android:src="@drawable/add_24"
-        app:tint="@color/white"
-        android:contentDescription="@string/add_airline_or_flight"
-        />
-
+    <include layout="@layout/menu" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
