--- a/airline-android/app/src/main/res/layout/activity_display_airline.xml
+++ b/airline-android/app/src/main/res/layout/activity_display_airline.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,9 +21,11 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
+        android:layout_marginTop="50dp"
         android:id="@+id/flight_list"
         >
     </ListView>
 
-</LinearLayout>
+    <include layout="@layout/menu" />
+
+</RelativeLayout>
