--- a/airline-android/app/src/main/res/layout/activity_help.xml
+++ b/airline-android/app/src/main/res/layout/activity_help.xml
@@ -8,7 +8,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Help"/>
+        android:textAlignment="viewStart"
+        android:textSize="34sp"
+        android:text="@string/help"/>
+
+
 
     <include layout="@layout/menu" />
 </RelativeLayout>
