--- a/airline-android/app/src/main/res/layout/help_menu_item.xml
+++ b/airline-android/app/src/main/res/layout/help_menu_item.xml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginVertical="20dp"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="55dp"
+        android:text="How to add information for a new flight"
+        android:textColor="@color/black"
+        android:id="@+id/help_topic"
+        android:layout_alignParentLeft="true"
+        android:textSize="20sp"
+        android:textStyle="italic"
+        />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/arrow_forward_ios_24"
+        />
+
+</RelativeLayout>
