--- a/airline-android/app/src/main/res/values/colors.xml
+++ b/airline-android/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#ED8B3E</color>
     <color name="colorAccent">#E87114</color>
-    <color name="light_gray">#D8D8D8</color>
+    <color name="light_gray">#F5F5F5</color>
     <color name="gray">#BCBCBC</color>
 </resources>
