--- a/airline-android/app/src/main/res/layout/activity_add_info.xml
+++ b/airline-android/app/src/main/res/layout/activity_add_info.xml
@@ -53,6 +53,7 @@
                     android:hint="@string/airline_name_eg"
                     android:textColorHint="@color/gray"
                     android:labelFor="@+id/airlineNameTxt"
+                    android:id="@+id/airlineNameTxtIp"
                     android:minHeight="48dp"
                     android:layout_marginHorizontal="5dp"
                     >
@@ -82,6 +83,7 @@
                     android:hint="@string/flight_num_eg"
                     android:textColorHint="@color/gray"
                     android:labelFor="@+id/flightNumberTxt"
+                    android:id="@+id/flightNumberTxtIp"
                     android:minHeight="48dp"
                     android:layout_marginHorizontal="5dp"
                     android:inputType="numberDecimal"
@@ -111,6 +113,7 @@
                     android:layout_weight="1"
                     android:hint="@string/src_eg"
                     android:labelFor="@+id/srcTxt"
+                    android:id="@+id/srcTxtIp"
                     android:minHeight="48dp"
                     android:layout_marginHorizontal="5dp"
                     android:textColorHint="@color/gray"
@@ -139,6 +142,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:labelFor="@+id/destTxt"
+                    android:id="@+id/destTxtIp"
                     android:hint="@string/dest_eg"
                     android:minHeight="48dp"
                     android:layout_marginHorizontal="5dp"
@@ -169,6 +173,7 @@
                     android:layout_weight="1"
                     android:hint="@string/departure_eg"
                     android:labelFor="@+id/departureTxt"
+                    android:id="@+id/departureTxtIp"
                     android:minHeight="48dp"
                     android:layout_marginHorizontal="5dp"
                     android:textColorHint="@color/gray"
@@ -200,6 +205,7 @@
                     android:layout_weight="1"
                     android:hint="@string/arrival_eg"
                     android:labelFor="@+id/arrivalTxt"
+                    android:id="@+id/arrivalTxtIp"
                     android:minHeight="48dp"
                     android:textColorHint="@color/gray"
                     >
@@ -217,6 +223,7 @@
                     android:layout_height="70sp"
                     android:layout_centerInParent="true"
                     android:textAlignment="center"
+                    android:id="@+id/add_info_btn"
                     android:text="Add"
                     android:backgroundTint="@color/colorAccent"
                     android:textColor="@color/white"
