--- a/airline-android/app/src/main/res/layout/menu.xml
+++ b/airline-android/app/src/main/res/layout/menu.xml
@@ -3,24 +3,26 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="end|bottom"
+    android:layout_gravity="center|bottom"
+    android:layout_centerHorizontal="true"
+    app:layout_constraintBottom_toBottomOf="parent"
     android:elevation="10dp"
     android:layout_alignParentBottom="true"
-    android:layout_alignParentRight="true"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/help_button"
+        android:id="@+id/home_button"
         android:layout_margin="16dp"
         app:fabSize="normal"
         app:backgroundTint="@color/colorPrimary"
         app:elevation="6dp"
-        android:src="@drawable/help_24"
+        android:src="@drawable/home_24"
         app:tint="@color/white"
-        android:contentDescription="@string/help_menu"
+        android:contentDescription="@string/home"
         />
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
@@ -38,14 +40,28 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/home_button"
+        android:id="@+id/search_button"
         android:layout_margin="16dp"
         app:fabSize="normal"
         app:backgroundTint="@color/colorPrimary"
         app:elevation="6dp"
-        android:src="@drawable/home_24"
+        android:src="@drawable/search_24"
         app:tint="@color/white"
-        android:contentDescription="@string/home"
+        android:contentDescription="Search for flights"
         />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/help_button"
+        android:layout_margin="16dp"
+        app:fabSize="normal"
+        app:backgroundTint="@color/colorPrimary"
+        app:elevation="6dp"
+        android:src="@drawable/help_24"
+        app:tint="@color/white"
+        android:contentDescription="@string/help_menu"
+        />
+
 
 </LinearLayout>
