--- a/airline-android/app/src/main/res/layout/help_menu_item.xml
+++ b/airline-android/app/src/main/res/layout/help_menu_item.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_marginVertical="3dp"
         android:src="@drawable/arrow_forward_ios_24"
         />
 
