--- a/airline-android/app/src/main/res/layout/menu.xml
+++ b/airline-android/app/src/main/res/layout/menu.xml
@@ -40,14 +40,14 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/search_button"
+        android:id="@+id/search_btn"
         android:layout_margin="16dp"
         app:fabSize="normal"
         app:backgroundTint="@color/colorPrimary"
         app:elevation="6dp"
         android:src="@drawable/search_24"
         app:tint="@color/white"
-        android:contentDescription="Search for flights"
+        android:contentDescription="@string/search_for_flights"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
