Fixed search functionality

--- a/airline-android/app/src/main/res/layout/flight_info_item.xml
+++ b/airline-android/app/src/main/res/layout/flight_info_item.xml
@@ -176,7 +176,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Arrives at"
+                    android:text="Flight Duration"
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
                     android:textSize="18sp"
