--- a/airline-android/app/src/main/res/layout/activity_display_airline.xml
+++ b/airline-android/app/src/main/res/layout/activity_display_airline.xml
@@ -22,9 +22,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:visibility="visible"
         android:id="@+id/flight_list"
         >
     </ListView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/no_flights_in_airline"
+        android:id="@+id/no_flight_msg"
+        android:textSize="18sp"
+        android:visibility="invisible"
+        android:layout_marginTop="90dp"
+        />
 
     <include layout="@layout/menu" />
 
